@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+<appengine-web-app xmlns="http://appengine.google.com/ns/1.0">
+  <application>application-id</application>
+  <version>1</version>
+</appengine-web-app>
